crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__access_unknown_field_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\nstruct Foo {\\ni: bool\\n}\\n\\nfn main() {\\nlet a = Foo { i: false };\\nlet b = a.t;\\n}\")"
---
error: no field `t` on type `Foo`
 --> main.mun:9:11
  |
9 | let b = a.t;
  |           ^ unknown field
  |
